@@ -1,3 +1,10 @@
+2017-10-11  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/axis.c (gen_tics): The start point for log-scale could not lie
+	outside the axis range (e.g. start at 1 for axis range [5:50]).
+	Remove this restriction.  Still not perfect backwards compatibility
+	with log-scale tic placement in earlier versions.
+
 2017-10-09  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_generate_pseudodata):  The sample-generation code
